crates/biome_cli/tests/snapshots/main_cases_protected_files/not_process_file_from_cli_verbose.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --verbose package-lock.json
```

## `package-lock.json`

```json
{ "name": "test" }
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - package-lock.json
  


```

# Emitted Messages

```block
package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file package-lock.json is protected because is handled by another tool. Biome won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files processed:
  
  ! The list is empty.
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files fixed:
  
  ! The list is empty.
  

```

```block
Scanned project folder in <TIME>.
Checked 0 files in <TIME>. No fixes applied.
Found 1 info.
```
