crates/biome_cli/tests/snapshots/main_cases_protected_files/not_process_file_from_stdin_format.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --stdin-file-path=package-lock.json
```

# Input messages

```block
{ "name": "test" }
```

# Emitted Messages

```block
{ "name": "test" }
```
