crates/biome_cli/tests/snapshots/main_cases_protected_files/not_process_file_from_stdin_lint.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --stdin-file-path=package.json
```

# Input messages

```block
{ "name": "test" }
```

# Termination Message

```block
stdin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The contents aren't fixed. Use the `--write` flag to fix them.
  


```

# Emitted Messages

```block
{ "name": "test" }
```
