crates/biome_cli/tests/snapshots/main_cases_protected_files/not_process_file_from_stdin_verbose_format.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --verbose --stdin-file-path=package-lock.json
```

# Input messages

```block
{ "name": "test" }
```

# Emitted Messages

```block
package-lock.json project  VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The file package-lock.json is protected because is handled by another tool. Biome won't process it.
  
  Verbose advice
  
    i You can hide this diagnostic by using --diagnostic-level=warn to increase the diagnostic level shown by CLI.
    

```

```block
{ "name": "test" }
```
