crates/biome_cli/tests/snapshots/main_cases_protected_files/should_return_the_content_of_protected_files_via_stdin.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --stdin-file-path package-lock.json
```

# Input messages

```block
{ "name": "something" }
```

# Emitted Messages

```block
{ "name": "something" }
```
